<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6B6B"
        android:gravity="start|center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText,MissingConstraints">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_btn_description"
            android:background="#FF6B6B"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingHorizontal="15dp"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/history" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/measurements_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="40dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/clear_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/rubik_semibold"
        android:textAllCaps="false"
        android:text="@string/clear_history"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>